<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <group android:id="@+id/menugroup1" >-->
<!--        <item-->
<!--            android:title="@string/sort_by_name"-->
<!--            android:id="@+id/by_name"-->
<!--            app:showAsAction="never"/>-->
<!--        <item-->
<!--            android:title="@string/sort_by_date"-->
<!--            android:id="@+id/by_date"-->
<!--            app:showAsAction="never"/>-->
<!--        <item-->
<!--            android:title="@string/sort_by_size"-->
<!--            android:id="@+id/by_size"-->
<!--            app:showAsAction="never"/>-->
<!--    </group>-->

    <item
        android:title="@string/sort_by"
        android:id="@+id/sort_option"
        app:showAsAction="never">

        <menu>
            <item
                android:title="@string/sort_by_name"
                android:id="@+id/by_name"
                app:showAsAction="never"/>
            <item
                android:title="@string/sort_by_date"
                android:id="@+id/by_date"
                app:showAsAction="never"/>
            <item
                android:title="@string/sort_by_size"
                android:id="@+id/by_size"
                app:showAsAction="never"/>
            <item
                android:title="@string/sort_by_duration"
                android:id="@+id/by_duration"
                app:showAsAction="never"/>
            <item
                android:title="@string/sort_by_artist"
                android:id="@+id/by_artist"
                app:showAsAction="never"/>
        </menu>

    </item>

</menu>