<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activities.SongActivity">


    <ImageView
        android:id="@+id/imageViewSong"
        android:layout_width="421dp"
        android:layout_height="341dp"
        android:contentDescription="@string/app_song"
        android:src="@drawable/song_portrait_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/songPicture"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/app_song"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewSong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_songs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_song"
        android:text="@string/play_now"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewSong" />


    <TextView
        android:id="@+id/titleName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:text="@string/title_song"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/titleArtist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleArtist"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/title_artist_song"
        android:textAlignment="center"
        android:textColor="@color/colorGreyWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarSongLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/buttonPlaySong"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_down_songs"
        android:contentDescription="@string/app_song"
        android:padding="10dp"
        android:src="@drawable/ic_play_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/buttonNextSong"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_down_songs"
        android:contentDescription="@string/app_song"
        android:padding="10dp"
        android:src="@drawable/ic_next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPlaySong" />

    <ImageButton
        android:id="@+id/buttonPrevSong"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_down_songs"
        android:contentDescription="@string/app_song"
        android:padding="10dp"
        android:src="@drawable/ic_previous_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlaySong"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <ImageButton-->
<!--        android:id="@+id/buttonShuffleSong"-->
<!--        android:layout_width="70dp"-->
<!--        android:layout_height="70dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:layout_marginBottom="40dp"-->
<!--        android:background="@drawable/repeat_shuffle_button_background"-->
<!--        android:contentDescription="@string/app_song"-->
<!--        android:src="@drawable/ic_repeat_button"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/buttonNextSong" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/buttonRepeatSong"-->
<!--        android:layout_width="70dp"-->
<!--        android:layout_height="70dp"-->
<!--        android:layout_marginEnd="20dp"-->
<!--        android:layout_marginRight="20dp"-->
<!--        android:layout_marginBottom="40dp"-->
<!--        android:background="@drawable/repeat_shuffle_button_background"-->
<!--        android:contentDescription="@string/app_song"-->
<!--        android:src="@drawable/ic_shuffle_button"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/buttonPrevSong" />-->

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorWhite"
        android:contentDescription="@string/app_song"
        android:src="@drawable/ic_volume_down"
        app:layout_constraintEnd_toStartOf="@+id/seekBarVolume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarSongLine" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorWhite"
        android:contentDescription="@string/app_song"
        android:src="@drawable/ic_volume_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBarVolume"
        app:layout_constraintTop_toBottomOf="@+id/seekBarSongLine" />

    <SeekBar
        android:id="@+id/seekBarVolume"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:contentDescription="@string/app_song"
        android:max="200"
        android:theme="@style/SeekBarTheme"
        android:thumb="@drawable/seek_bar_volume_thumb"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlaySong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarSongLine" />


    <SeekBar
        android:id="@+id/seekBarSongLine"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_song"
        android:theme="@style/SeekBarTheme"
        android:thumb="@drawable/seek_bar_song_line_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSong" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_0_00"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toStartOf="@+id/seekBarSongLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSong" />

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_1_29"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBarSongLine"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSong" />


</androidx.constraintlayout.widget.ConstraintLayout>